--- a/WebParking2025/Views/Home/Index.cshtml
+++ b/WebParking2025/Views/Home/Index.cshtml
@@ -3,6 +3,17 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to our Parking!</h1>
+    <p>Parking 1</p>
+    <a class="btn btn-primary" role="button" asp-controller="Home" asp-action="Parking">
+        Info1
+    </a>
+    <p>Parking 2</p>
+    <a class="btn btn-primary" role="button" asp-controller="Home" asp-action="Parking">
+        Info2
+    </a>
+    <p>Parking 3</p>
+    <a class="btn btn-primary" role="button" asp-controller="Home" asp-action="Parking">
+        Info3
+    </a>
 </div>
