--- a/WebParking2025/Views/Home/Index.cshtml
+++ b/WebParking2025/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
             <h1 class="display-4">Welcome to our Parking!</h1>
         </div>
         <div class="col-md-6 text-center">
-            <img src="~/images/parking.jpg" alt="Parking Area" class="img-fluid rounded">
+            <img src="~/images/parking.jpg" alt="Parking Area" class="img-fluid rounded large-img">
         </div>
     </div>
 </div>
@@ -26,7 +26,7 @@
         <div class="col-md-4">
             <img src="~/images/parking3.jpg" alt="Parking 3" class="img-fluid rounded">
             <p>Parking 3</p>
-            <<button class="btn-black" onclick="location.href='@Url.Action("Info", "ParkingsInfo",new { id = 3})'">Info2</button>
+            <<button class="btn-black" onclick="location.href='@Url.Action("Info", "ParkingsInfo",new { id = 3})'">Info3</button>
         </div>
     </div>
 </div>
