--- a/WebParking2025/Views/Shared/_Layout.cshtml
+++ b/WebParking2025/Views/Shared/_Layout.cshtml
@@ -28,16 +28,20 @@
                 </div>
             </div>
         </nav>
-   </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    </header>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <main role="main" class="pb-4">
+                    @RenderBody()
+                </main>
+            </div>
+        </div>
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - WebParking2025 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="border-top bg-dark text-white py-3">
+        <div class="container text-center">
+            <p>&copy; 2025 - WebParking2025</p>
+            <p><a class="text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy Policy</a></p>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
