--- a/WebParking2025/wwwroot/css/site.css
+++ b/WebParking2025/wwwroot/css/site.css
@@ -47,3 +47,10 @@ body {
     transform: scale(1.05);
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
 }
+.large-img {
+    height: 400px;
+    object-fit: cover; 
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
