--- a/WebParking2025/Views/Shared/_Layout.cshtml
+++ b/WebParking2025/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                         <li class="nav-item">
                             <a class="nav-link custom-nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                    <partial name = "_LoginPartial.cshtml"/>
                     </ul>
                 </div>
             </div>
