Add roles/reservervation schema

--- a/WebParking2025/Views/ParkingsInfo/Info.cshtml
+++ b/WebParking2025/Views/ParkingsInfo/Info.cshtml
@@ -7,7 +7,7 @@
     var capacity = Model.MaxCapacity;
     var id = Model.Id;
     var image = new Dictionary<string, string>
-    {
+    {   //TODO:Retrieve this info from db
         { "Aristotelous","/images/ParkingAristotelous.jpg" },
         { "Omonoia", "/images/ParkingOmonoia.jpg" },
         { "Volos", "/images/ParkingVolos.jpg" }
