--- a/WebParking2025/Views/ParkingsInfo/Reservation.cshtml
+++ b/WebParking2025/Views/ParkingsInfo/Reservation.cshtml
@@ -16,26 +16,26 @@
             <div class="card shadow-lg p-4">
                 <h3 class="text-center text-primary mb-4">Make a Reservation</h3>
 
-                <form id="reservationForm">
+                <form id="reservationForm" asp-controller="Reservation" asp-action="CompleteReservation" asp-route-id=@Model.Id method="post">
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label for="firstName" class="form-label">First Name</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" required>
+                            <input type="text" class="form-control" id="firstName" name="FirstName" placeholder=" Enter your first name" required>
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="lastName" class="form-label">Last Name</label>
-                            <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" required>
+                            <input type="text" class="form-control" id="lastName" name="LastName" placeholder="Enter your last name" required>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label for="phone" class="form-label">Phone</label>
-                            <input type="tel" class="form-control" id="phone" placeholder="Enter your phone number" required>
+                            <input type="tel" class="form-control" id="phone" name="Phone" placeholder="Enter your phone number" required>
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                            <input type="email" class="form-control" id="email" name="Email" placeholder="Enter your email" required>
                         </div>
                     </div>
 
@@ -43,15 +43,15 @@
                     <div class="row">
                         <div class="col-md-4 mb-3">
                             <label for="plateNumber" class="form-label">License Plate</label>
-                            <input type="text" class="form-control" id="plateNumber" placeholder="Enter plate number" required>
+                            <input type="text" class="form-control" id="plateNumber" name="LicensePlate" placeholder="Enter plate number" required>
                         </div>
                         <div class="col-md-4 mb-3">
                             <label for="carBrand" class="form-label">Car Brand</label>
-                            <input type="text" class="form-control" id="carBrand" placeholder="Enter car brand" required>
+                            <input type="text" class="form-control" id="carBrand" name="CarBrand" placeholder="Enter car brand" required>
                         </div>
                         <div class="col-md-4 mb-3">
                             <label for="carColor" class="form-label">Car Color</label>
-                            <input type="text" class="form-control" id="carColor" placeholder="Enter car color" required>
+                            <input type="text" class="form-control" id="carColor" name="CarColor" placeholder="Enter car color" required>
                         </div>
                     </div>
 
@@ -59,15 +59,15 @@
                     <div class="row">
                         <div class="col-md-4 mb-3">
                             <label for="reservationDate" class="form-label">Date</label>
-                            <input type="date" class="form-control" id="reservationDate" required>
+                            <input type="date" class="form-control" id="reservationDate" name="ReservationDate" required>
                         </div>
                         <div class="col-md-4 mb-3">
                             <label for="reservationTime" class="form-label">Time</label>
-                            <input type="time" class="form-control" id="reservationTime" required>
+                            <input type="time" class="form-control" id="reservationTime" name="ReservationTime" required>
                         </div>
                         <div class="col-md-4 mb-3">
                             <label for="parkingSpot" class="form-label">Parking Spot</label>
-                            <select id="parkingSpot" name="parkingSpot" class="form-control" required>
+                            <select id="parkingSpot" name="ParkingSpot" class="form-control" required>
                                 <option value="" disabled selected>Select a Spot</option>
                                 @for (int i = 1; i <= 10; i++)
                                 {
