--- a/WebParking2025/Views/Shared/_LoginPartial.cshtml
+++ b/WebParking2025/Views/Shared/_LoginPartial.cshtml
@@ -11,8 +11,11 @@
             <a id="manage" class="nav-link custom-nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Manage</a>
     </li>
     <li class="nav-item">
+            <a class="nav-link active custom-nav-link" asp-area="" asp-controller="Admin" asp-action="Panel">Admin Panel</a>
+    </li>
+    <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button id="logout" type="submit" class="nav-btn custom-nav-btn">Logout</button>
+                <a class="nav-link custom-nav-link" id="logout" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
         </form>
     </li>
 }
