--- a/WebParking2025/Views/Admin/Panel.cshtml
+++ b/WebParking2025/Views/Admin/Panel.cshtml
@@ -1,8 +1,12 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
-    <div>This is admin page!!!</div>
-    <a href="@Url.Action("ManageRoles", "Admin")" class="btn btn-primary mt-3">Give roles</a>
-    <a href="@Url.Action("Reservation", "ParkingsInfo")" class="btn btn-primary mt-3">Edit reservations</a>
-}
+
+<div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 60vh;">
+    <h4 class="mb-4">This is an admin page.</h4>
+
+    <div class="d-flex gap-3">
+        <a class="btn btn-primary" href="/Admin/ManageRoles">Give roles</a>
+        <a class="btn btn-primary" href="/Admin/EditReservations">Edit reservations</a>
+    </div>
+</div>
