--- a/WebParking2025/Views/Reservation/CompleteReservation.cshtml
+++ b/WebParking2025/Views/Reservation/CompleteReservation.cshtml
@@ -4,4 +4,13 @@
     var id = Model.Id;
 }
 
-<div>Reservation complete with id:@id Mail sent!!!</div>
+<div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
+    <div class="text-center">
+        <h3 class="text-dark mb-4">
+            You completed your reservation.<br />
+            An email will be sent to you for confirmation.
+        </h3>
+
+        <a href="/" class="btn btn-primary">Return to Home</a>
+    </div>
+</div>
