--- a/WebParking2025/Views/Reservation/ReservationError.cshtml
+++ b/WebParking2025/Views/Reservation/ReservationError.cshtml
@@ -1,3 +1,7 @@
 ﻿
-
-<div>This spot is already reserved for the date you selected please check availability!!!</div>
+<div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
+    <div class="text-center">
+        <h4 class="text-dark mb-4">
+            This spot is already reserved for the date you selected.<br />
+            Please check availability.
+        </h4>
