--- a/WebParking2025/Views/Admin/Panel.cshtml
+++ b/WebParking2025/Views/Admin/Panel.cshtml
@@ -7,6 +7,6 @@
 
     <div class="d-flex gap-3">
         <a class="btn btn-primary" href="/Admin/ManageRoles">Give roles</a>
-        <a class="btn btn-primary" href="/Admin/EditReservations">Edit reservations</a>
+        <a class="btn btn-primary" href="/Admin/ManageReservations">Edit reservations</a>
     </div>
 </div>
