--- a/WebParking2025/Views/Home/Index.cshtml
+++ b/WebParking2025/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
         <div class="col-md-4">
             <img src="~/images/parking3.jpg" alt="Parking 3" class="img-fluid rounded">
             <p>Parking 3</p>
-            <<button class="btn-black" onclick="location.href='@Url.Action("Info", "ParkingsInfo",new { id = 3})'">Info3</button>
+            <button class="btn-black" onclick="location.href='@Url.Action("Info", "ParkingsInfo",new { id = 3})'">Info3</button>
         </div>
     </div>
 </div>
