--- a/WebParking2025/Views/Shared/_LoginPartial.cshtml
+++ b/WebParking2025/Views/Shared/_LoginPartial.cshtml
@@ -14,6 +14,9 @@
             <a class="nav-link active custom-nav-link" asp-area="" asp-controller="Admin" asp-action="Panel">Admin Panel</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link active custom-nav-link" asp-area="" asp-controller="Reservation" asp-action="ConfirmReservation">Confirm Reservation</a>
+    </li>
+    <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <a class="nav-link custom-nav-link" id="logout" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
         </form>
