--- a/WebParking2025/Views/ParkingsInfo/Info.cshtml
+++ b/WebParking2025/Views/ParkingsInfo/Info.cshtml
@@ -27,7 +27,7 @@
                     <p class="card-text"><strong>Capacity:</strong> @capacity</p>
                     <p class="card-text"><strong>Address:</strong> @address</p>
                     <p class="card-text"><strong>Phone:</strong> @phone</p>
-                    <a href="@Url.Action("Reservation", "ParkingsInfo",new { id = id})" class="btn btn-primary mt-3">Make Reservation</a>
+                    <a href="@Url.Action("Reservation", "ParkingsInfo",new { id = id})" class="btn btn-custom-reservation mt-3">Make Reservation</a>
                     <a href="/" class="btn btn-primary mt-3">Back to Home</a>
                 </div>
             </div>
