--- a/WebParking2025/Views/Reservation/ConfirmReservation.cshtml
+++ b/WebParking2025/Views/Reservation/ConfirmReservation.cshtml
@@ -1,34 +1,48 @@
-﻿<body>
-    <div class="container">
-        <form action="/Reservation/UserReservations" method="post" enctype="multipart/form-data">
-            
-
-            <div class="form-group">
-                <label for="FirstName">First Name</label>
-                <input type="text" name="Name" id="Name" required />
-            </div>
-
-            <div class="form-group">
-                <label for="LastName">Last Name</label>
-                <input type="text" name="Name" id="Name" required />
-            </div>
-
-            <div class="form-group">
-                <label for="Email">Email</label>
-                <input type="email" name="Email" id="Email" required />
-            </div>
-
-            <div class="form-group">
-                <label for="Phone">Phone</label>
-                <input type="tel" name="Phone" id="Phone" required />
-            </div>
-
-            <div class="form-group">
-                <label for="Photo">Upload Photo</label>
-                <input type="file" name="Photo" id="Photo" accept="image/*" required />
-            </div>
-
+﻿
+<div class="form-container">
+    <form method="post" enctype="multipart/form-data">
+        <div>
+            <label>First Name</label><br />
+            <input type="text" name="FirstName" />
+        </div>
+        <div>
+            <label>Last Name</label><br />
+            <input type="text" name="LastName" />
+        </div>
+        <div>
+            <label>Email</label><br />
+            <input type="email" name="Email" />
+        </div>
+        <div>
+            <label>Phone</label><br />
+            <input type="tel" name="Phone" />
+        </div>
+        <div>
+            <label>Upload Photo</label><br />
+            <input type="file" name="Photo" />
+        </div>
+        <div class="mt-3">
             <button type="submit">Search</button>
-        </form>
-    </div>
-</body>
+        </div>
+    </form>
+</div>
+
+<style>
+    .form-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 90vh;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    input, button {
+        width: 250px;
+        padding: 8px;
+    }
+</style>
