--- a/WebParking2025/Views/Admin/ManageRoles.cshtml
+++ b/WebParking2025/Views/Admin/ManageRoles.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Dictionary<User,string>
 
 @{
-    
+    ViewData["Title"] = "Roles";
     var existingRoles = new List<string> { "Admin","User"};
 }
 
