--- a/WebParking2025/Views/Admin/Panel.cshtml
+++ b/WebParking2025/Views/Admin/Panel.cshtml
@@ -1,6 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@{
+    ViewData["Title"] = "Admin";
+}
 
 <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 60vh;">
     <h4 class="mb-4">This is an admin page.</h4>
