--- a/WebParking2025/Views/Home/Index.cshtml
+++ b/WebParking2025/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="container mt-4">
+﻿@{
+    ViewData["Title"] = "Home";
+}
+<div class="container mt-4">
     <div class="row align-items-center">
         <div class="col-md-6 text-center">
             <h1 class="display-4">Welcome to our Parking!</h1>
