--- a/WebParking2025/Views/Reservation/ConfirmReservation.cshtml
+++ b/WebParking2025/Views/Reservation/ConfirmReservation.cshtml
@@ -1,6 +1,7 @@
-﻿
+﻿@{ViewData["Title"] = "Parking Info";}
+
 <div class="form-container">
-    <form method="post" enctype="multipart/form-data">
+    <form action="/Reservation/UserReservations" method="post" enctype="multipart/form-data">
         <div>
             <label>First Name</label><br />
             <input type="text" name="FirstName" />
